devkub-homeworks/13-kuber-homeworks-03-network/backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: praqma/network-multitool
          name: backend
          ports:
            - containerPort: 80
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: backend
  name: backend
spec:
  ports:
    - name: backend
      port: 80
      targetPort: 80
  selector:
    app: backend
  type: ClusterIP
