devkub-homeworks/13-kuber-homeworks-03-network/cache.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cache
  name: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - image: praqma/network-multitool
          name: cache
          ports:
            - containerPort: 80
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: cache
  name: cache
spec:
  ports:
    - name: cache
      port: 80
      targetPort: 80
  selector:
    app: cache
  type: ClusterIP
