devkub-homeworks/13-kuber-homeworks-03-network/frontend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: praqma/network-multitool
          name: frontend
          ports:
            - containerPort: 80
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - name: frontend
      port: 80
      targetPort: 80
  selector:
    app: frontend
  type: ClusterIP
